final morning updates

--- a/src/pug/pages/about.pug
+++ b/src/pug/pages/about.pug
@@ -38,9 +38,15 @@ block content
                         p.page-header-text.md-5.pt-4 We believe health care is delivered best when it reflects the unique and diverse needs of the communities served, and that individuals recieve the best care from professionals in their neighborhoods, towns and cities. Our mission at Wing Health is to connect patients with local and trusted providers offering telehealth. 
                         h1.pt-4 Team
                         p.page-header-text.md-5.pt-4 Stephen Grinich brings career experience building telemedicine solutions and digital health products. Stephen grew up in a small town in the Willamette Valley of Oregon, the type of community now adopting telehealth for the first time. Stephen studied health care and digital health innovation at UCSF Innovation Ventures and computer science, mathematics and health economics at Carleton College. 
-                        p.page-header-text.md-5 Jinsy Jacob is the Medical Director of Innovation at Nevada Health Centers. Jinsy brings her experience launching and growing a successful telemedicine program at Nevada Health Centers, where she focuses on underserved, urban communities.
-                        p.page-header-text.md-5 Nikhil Yedulla is pursuing a medical degree at Wayne State University School of Medicine. Nikhil brings his experience in telehealth research at Henry Ford Health System and medtech commercialization as CMO of Surgicure Technologies. Nikhil studied biological science and economics at Wayne State University.
-                        h1.pt-4 Our story 
+                            a.icon-list-social-link(href='https://www.linkedin.com/in/stephengrinich', target='_blank')
+                                i.fab.fa-linkedin
+                        p.page-header-text.md-5 Jinsy Jacob is the Medical Director of Innovation at Nevada Health Centers. Jinsy brings her experience launching and growing a successful telemedicine program at Nevada Health Centers, where she focuses on underserved, urban communities. 
+                            a.icon-list-social-link(href='https://www.linkedin.com/in/jjacobmdmba', target='_blank')
+                                i.fab.fa-linkedin
+                        p.page-header-text.md-5 Nikhil Yedulla is pursuing a medical degree at Wayne State University School of Medicine. Nikhil brings his experience in telehealth research at Henry Ford Health System and medtech commercialization as CMO of Surgicure Technologies. Nikhil studied biological science and economics at Wayne State University. 
+                            a.icon-list-social-link(href='https://www.linkedin.com/in/nikhil-yedulla-3a7048142', target='_blank')
+                                i.fab.fa-linkedin
+                        h1.pt-4 Our Story 
                         p.page-header-text.md-5.pt-4 Wing Health was founded at the <a href="https://www.youtube.com/watch?v=S_VjyVsAQhY&feature=emb_title"> MIT COVID-19 Challenge - Beat The Pandemic</a>. 1500 participants and 250 mentors from around the world came together to help tackle some of the most pressing issues arising from the COVID-19 pandemic. Our pitch was selected as a top team for the track focusing on new ways to deliver care in a COVID-19 world. 
             
 
