going to add choose seomthing else choice

--- a/src/pug/pages/about.pug
+++ b/src/pug/pages/about.pug
@@ -40,14 +40,14 @@ block content
                         p.page-header-text.md-5.pt-4 Stephen Grinich brings career experience building telemedicine solutions and digital health products. Stephen grew up in a small town in the Willamette Valley of Oregon, the type of community now adopting telehealth for the first time. Stephen studied health care and digital health innovation at UCSF Innovation Ventures and computer science, mathematics and health economics at Carleton College. 
                             a.icon-list-social-link(href='https://www.linkedin.com/in/stephengrinich', target='_blank')
                                 i.fab.fa-linkedin
-                        p.page-header-text.md-5 Jinsy Jacob is the Medical Director of Innovation at Nevada Health Centers. Jinsy brings her experience launching and growing a successful telemedicine program at Nevada Health Centers, where she focuses on underserved, urban communities. 
+                        p.page-header-text.md-5 Jinsy Jacob, MD, MBA is a pediatrician and Medical Director of Innovation, Quality and Research at Nevada Health Centers. She has worked with underserved communities throughout her career and is passionate about developing innovative solutions that help solve problems that are faced by her patients.
                             a.icon-list-social-link(href='https://www.linkedin.com/in/jjacobmdmba', target='_blank')
                                 i.fab.fa-linkedin
                         p.page-header-text.md-5 Nikhil Yedulla is pursuing a medical degree at Wayne State University School of Medicine. Nikhil brings his experience in telehealth research at Henry Ford Health System and medtech commercialization as CMO of Surgicure Technologies. Nikhil studied biological science and economics at Wayne State University. 
                             a.icon-list-social-link(href='https://www.linkedin.com/in/nikhil-yedulla-3a7048142', target='_blank')
                                 i.fab.fa-linkedin
                         h1.pt-4 Our Story 
-                        p.page-header-text.md-5.pt-4 Wing Health was founded at the <a href="https://www.youtube.com/watch?v=S_VjyVsAQhY&feature=emb_title"> MIT COVID-19 Challenge - Beat The Pandemic</a>. 1500 participants and 250 mentors from around the world came together to help tackle some of the most pressing issues arising from the COVID-19 pandemic. Our pitch was selected as a top team for the track focusing on new ways to deliver care in a COVID-19 world. 
+                        p.page-header-text.md-5.pt-4 Stephen, Jinsy and Nikhil met at the <a href="https://www.youtube.com/watch?v=S_VjyVsAQhY&feature=emb_title"> MIT COVID-19 Challenge - Beat The Pandemic</a> and coalesced around the idea of hyperlocal telehealth delivery within their local communities. At this event, 1500 participants and 250 mentors from around the world came together to help tackle some of the most pressing issues arising from the COVID-19 pandemic. Wing Health was selected as a top team for the track focusing on new ways to deliver care in a COVID-19 world. 
             
 
                 //- .row.align-items-center
