--- a/src/pug/pages/provider.pug
+++ b/src/pug/pages/provider.pug
@@ -34,9 +34,9 @@ block content
                 .row.align-items-center
                     .col-lg-7
                         h1.page-header-title Local opportunity for providers
-                        p.page-header-text.md-5 Source new and existing patients, schedule visits and bill for virtual care
+                        p.page-header-text.md-5 Source new and existing patients to your virtual clinic
                     .col-lg-5
-                        img.img-fluid(src='assets/img/svgs/doctor-woman.svg', height="50px").mb-5
+                        img.img-fluid(src='assets/img/svgs/doctor-woman.svg' style="max-height: 400px").mb-5
                 .row.align-items-center
                     .col-lg-4.mb-5.mb-lg-0
                         .card.h-100
@@ -48,19 +48,20 @@ block content
                         .card.h-100
                             .card-body.p-5
                                 .text-center
-                                    .h1 Onboard to telehealth
-                                    .p Attend one of our information sessions and ask any questions
+                                    .h1 Patients are ready for virtual care
+                                    .p We educate and guide patients to resources needed to access your virtual offering 
                     .col-lg-4.mb-5.mb-lg-0
                         .card.h-100
                             .card-body.p-5
                                 .text-center
-                                    .h1 Bill Medicare, Medicaid and private insurance
-                                    .p New regulation expands coverage
+                                    .h1 First five patients sourced for free
+                                    .p $150 per month, per provider membership after
         .page-header-content.pt-4
             .container.pt-4
                 .row.align-items-center.text-center.pt-4
                     .col-lg-12
-                        h1 Start providing virtual care in your community
+                        h1 Be discovered by patients in your community seeking virtual care
+                        p A Wing Health representitive will reach out within 48 hous
                 .row.align-items-center.pt-4  
                     .col-lg-2
                     .col-lg-8
