--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -85,7 +85,9 @@ block content
                     p.page-header-text.mb-5 Wing Health makes it easy reach patients where they are over SMS. We connect individuals to local resources for digital access, then connect them to you for virtual care appointments
 
             .mt-5.text-center
-                a.btn.btn-teal.btn-marketing.rounded-pill(href='provider.html') For providers
+                a.btn.btn-teal.btn-marketing.rounded-pill(href='features.html') Features
+
+                //- a.btn.btn-teal.btn-marketing.rounded-pill(href='provider.html') For providers
 
     //- include mixins/header.pug
     //- +header({
