--- a/src/pug/pages/mixins/navbar.pug
+++ b/src/pug/pages/mixins/navbar.pug
@@ -17,9 +17,9 @@ mixin navbar(options)
                     li.nav-item
                         a.nav-link(href='features.html')
                             | Features
-                    li.nav-item
-                        a.nav-link(href='provider.html')
-                            | For providers
+                    //- li.nav-item
+                    //-     a.nav-link(href='provider.html')
+                    //-         | For providers
                     li.nav-item
                         a.nav-link(href='about.html')
                             | About us
