--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -41,7 +41,7 @@ block content
                                 .col-lg-6
                                     a.btn.btn-teal.btn-marketing.rounded-pill(href='features.html') See Features
                                 .col-lg-6
-                                    a.btn.btn-teal.btn-marketing.rounded-pill(href='see-demo.html') Schedule demo 
+                                    a.btn.btn-teal.btn-marketing.rounded-pill(href='schedule-demo.html') Schedule demo 
                     .col-lg-5
                         img.img-fluid(src='assets/img/screenshot-sms/speak-english.png')
 
