fix button badness

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -36,13 +36,12 @@ block content
                     .col-lg-7
                         h1.page-header-title SMS text onboarding to virtual care
                         p.page-header-text.mb-5 The Wing Health assistant connects individuals to your nearby virtual care offering and the resources needed for connectivity and communication
-                        .container            
-                            .row.align-items-center
-                                .col-lg-6
-                                    a.btn.btn-teal.btn-marketing.rounded-pill(href='features.html') See Features
-                                .col-lg-6
-                                    a.btn.btn-teal.btn-marketing.rounded-pill(href='schedule-demo.html') Schedule demo 
-                    .col-lg-5
+                        .row.align-items-center
+                            .col-lg-6.pt-4
+                                a.btn.btn-teal.btn-marketing.rounded-pill(href='features.html') See Features
+                            .col-lg-6.pt-4
+                                a.btn.btn-teal.btn-marketing.rounded-pill(href='schedule-demo.html') Schedule demo 
+                    .col-lg-5.pt-4
                         img.img-fluid(src='assets/img/screenshot-sms/speak-english.png')
 
                     .container.pt-5
