--- a/src/pug/pages/features.pug
+++ b/src/pug/pages/features.pug
@@ -48,7 +48,7 @@ block content
                 .row.align-items-center
                     .col-lg-7
                         h1.page-header-title Resources for affordable data and WIFI
-                        p.page-header-text.mb-5 Patients use the Wing Health assistant to find nearby WIFI hotspots, affordable data plans, and affordable home internet plans
+                        p.page-header-text.mb-5 Patients use the Wing Health assistant to find nearby WIFI hotspots, affordable data plans and affordable home internet plans
                     .col-lg-5
                         img.img-fluid(src='assets/img/screenshot-sms/data-resources.png' style="max-height: 700px")        
 
@@ -56,7 +56,7 @@ block content
                 .row.align-items-center
                     .col-lg-7
                         h1.page-header-title Onboard patients in multiple languages
-                        p.page-header-text.mb-5 Our conversational agent reflects the diversity of the communities we serve. Supporting English and Spanish, with more languages on the way
+                        p.page-header-text.mb-5 The Wing Health assistant reflects the diversity of the communities we serve. Supporting English and Spanish, with more languages on the way
                     .col-lg-5
                         img.img-fluid(src='assets/img/screenshot-sms/speak-spanish.png' style="max-height: 700px")
 
@@ -64,7 +64,7 @@ block content
                 .row.align-items-center
                     .col-lg-7
                         h1.page-header-title Collect insurance information
-                        p.page-header-text.mb-5 Help patients understand their eligibility and coverage before scheduling a visit
+                        p.page-header-text.mb-5 Help patients understand their eligibility and coverage at your health center
                     .col-lg-5
                         img.img-fluid(src='assets/img/screenshot-sms/insurance.png' style="max-height: 700px")
 
@@ -72,7 +72,7 @@ block content
                 .row.align-items-center
                     .col-lg-7
                         h1.page-header-title Schedule visits
-                        p.page-header-text.mb-5 Our virtual assistant matches patients with providers at your clinic, schedules appointments and sends a link for the virtual visit 
+                        p.page-header-text.mb-5 Our virtual assistant schedules appointments at your health center's vitual clinic
                     .col-lg-5
                         img.img-fluid(src='assets/img/screenshot-sms/schedule.png' style="max-height: 700px")        
                         
