--- a/src/pug/pages/about.pug
+++ b/src/pug/pages/about.pug
@@ -47,15 +47,18 @@ block content
                             a.icon-list-social-link(href='https://www.linkedin.com/in/nikhil-yedulla-3a7048142', target='_blank')
                                 i.fab.fa-linkedin
                         h1.pt-4 Our Story 
-                        p.page-header-text.md-5.pt-4 Stephen, Jinsy and Nikhil met at the <a href="https://www.youtube.com/watch?v=S_VjyVsAQhY&feature=emb_title"> MIT COVID-19 Challenge - Beat The Pandemic</a> and coalesced around the idea of hyperlocal telehealth delivery within their local communities. At this event, 1500 participants and 250 mentors from around the world came together to help tackle some of the most pressing issues arising from the COVID-19 pandemic. Wing Health was selected as a top team for the track focusing on new ways to deliver care in a COVID-19 world. 
+                        p.page-header-text.md-5.pt-4 Stephen, Jinsy and Nikhil met at the <a href="https://www.youtube.com/watch?v=S_VjyVsAQhY&feature=emb_title"> MIT COVID-19 Challenge - Beat The Pandemic</a> and coalesced around the idea of hyperlocal telehealth delivery within their local communities. We were selected as a top team for the track focusing on new ways to deliver care in a COVID-19 world. Wing Health has also participated in the Sling Health Bootcamp and UCSF COVID-19 Hackathon.
 
             .container            
                 .row.align-items-center
-                    .col-lg-4
+                    .col-lg-6
                         img.img-fluid(src='assets/img/ucsf-hackathon.jpeg').mb-5
-                    .col-lg-4
+                    .col-lg-6
                         img.img-fluid(src='assets/img/covid-challenge.png').mb-5
-                    .col-lg-4
+                .row.align-items-center
+                    .col-lg-6
+                        img.img-fluid(src='assets/img/stanfordrebuild.png').mb-5
+                    .col-lg-6
                         img.img-fluid(src='assets/img/sling-health.png').mb-5
 
             
