--- a/src/pug/pages/about.pug
+++ b/src/pug/pages/about.pug
@@ -45,6 +45,8 @@ block content
                                 i.fab.fa-linkedin
                         p.page-header-text.md-5 Nikhil Yedulla is pursuing a medical degree at Wayne State University School of Medicine. Nikhil brings his experience in telehealth research at Henry Ford Health System and medtech commercialization as CMO of Surgicure Technologies. Nikhil studied biological science and economics at Wayne State University. 
                             a.icon-list-social-link(href='https://www.linkedin.com/in/nikhil-yedulla-3a7048142', target='_blank')
+                        p.page-header-text.md-5 Sabrina Dass is pursuing a medical degree at Wayne State University School of Medicine.
+                            a.icon-list-social-link(href='https://www.linkedin.com/in/sabrina-dass-199b13a6/', target='_blank')
                                 i.fab.fa-linkedin
                         h1.pt-4 Our Story 
                         p.page-header-text.md-5.pt-4 Stephen, Jinsy and Nikhil met at the <a href="https://www.youtube.com/watch?v=S_VjyVsAQhY&feature=emb_title"> MIT COVID-19 Challenge - Beat The Pandemic</a> and coalesced around the idea of hyperlocal telehealth delivery within their local communities. We were selected as a top team for the track focusing on new ways to deliver care in a COVID-19 world. Wing Health has also participated in the Sling Health Bootcamp and UCSF COVID-19 Hackathon.
