--- a/src/pug/pages/about.pug
+++ b/src/pug/pages/about.pug
@@ -3,7 +3,7 @@ extends ../layouts/default.pug
 block config
 
     //- Global Page Configuration
-    - var pageTitle = 'Wing Health'
+    - var pageTitle = 'Wing'
 
 
 block content
@@ -35,33 +35,23 @@ block content
                     .col-lg-8
                         h1.page-header-title.pt-4 About us
                         h1.pt-4 Mission
-                        p.page-header-text.md-5.pt-4 We believe health care is delivered best when it reflects the unique and diverse needs of the communities served, and that individuals recieve the best care from professionals in their neighborhoods, towns and cities. Our mission at Wing Health is to connect patients with local and trusted providers offering telehealth. 
+                        p.page-header-text.md-5.pt-4 Wing exists to increase equitable access to virtual health care in a COVID-19 world
                         h1.pt-4 Team
-                        p.page-header-text.md-5.pt-4 Stephen Grinich brings career experience building telemedicine solutions and digital health products. Stephen grew up in a small town in the Willamette Valley of Oregon, the type of community now adopting telehealth for the first time. Stephen studied health care and digital health innovation at UCSF Innovation Ventures and computer science, mathematics and health economics at Carleton College. 
+                        p.page-header-text.md-5.pt-4 Stephen Grinich is an engineer with experience building telemedicine solutions and digital health products. Stephen studied health care innovation at UCSF Innovation Ventures and computer science, mathematics and health economics at Carleton College. 
                             a.icon-list-social-link(href='https://www.linkedin.com/in/stephengrinich', target='_blank')
                                 i.fab.fa-linkedin
-                        p.page-header-text.md-5 Jinsy Jacob, MD, MBA is a pediatrician and Medical Director of Innovation, Quality and Research at Nevada Health Centers. She has worked with underserved communities throughout her career and is passionate about developing innovative solutions that help solve problems that are faced by her patients.
+                        p.page-header-text.md-5 Jinsy Jacob, MD, MBA is a pediatrician and Medical Director of Innovation, Quality and Research at Nevada Health Centers. She has worked with underserved communities throughout her career and is passionate about developing innovative solutions that help solve problems that are faced by her patients.    
                             a.icon-list-social-link(href='https://www.linkedin.com/in/jjacobmdmba', target='_blank')
                                 i.fab.fa-linkedin
                         p.page-header-text.md-5 Nikhil Yedulla is pursuing a medical degree at Wayne State University School of Medicine. Nikhil brings his experience in telehealth research at Henry Ford Health System and medtech commercialization as CMO of Surgicure Technologies. Nikhil studied biological science and economics at Wayne State University. 
                             a.icon-list-social-link(href='https://www.linkedin.com/in/nikhil-yedulla-3a7048142', target='_blank')
-                        p.page-header-text.md-5 Sabrina Dass is pursuing a medical degree at Wayne State University School of Medicine.
+                                i.fab.fa-linkedin
+                        p.page-header-text.md-5 Sabrina Dass is pursuing a medical degree at Wayne State University School of Medicine. 
                             a.icon-list-social-link(href='https://www.linkedin.com/in/sabrina-dass-199b13a6/', target='_blank')
                                 i.fab.fa-linkedin
                         h1.pt-4 Our Story 
-                        p.page-header-text.md-5.pt-4 Stephen, Jinsy and Nikhil met at the <a href="https://www.youtube.com/watch?v=S_VjyVsAQhY&feature=emb_title"> MIT COVID-19 Challenge - Beat The Pandemic</a> and coalesced around the idea of hyperlocal telehealth delivery within their local communities. We were selected as a top team for the track focusing on new ways to deliver care in a COVID-19 world. Wing Health has also participated in the Sling Health Bootcamp and UCSF COVID-19 Hackathon.
+                        p.page-header-text.md-5.pt-4 The team met at the <a href="https://www.youtube.com/watch?v=S_VjyVsAQhY&feature=emb_title"> MIT COVID-19 Challenge - Beat The Pandemic</a> and coalesced around the idea of hyperlocal telehealth delivery within their local communities. We were selected as a top team for the track focusing on new ways to deliver care in a COVID-19 world. Wing has also participated in the Sling Health Bootcamp and UCSF COVID-19 Hackathon.
 
-            .container            
-                .row.align-items-center
-                    .col-lg-6
-                        img.img-fluid(src='assets/img/ucsf-hackathon.jpeg').mb-5
-                    .col-lg-6
-                        img.img-fluid(src='assets/img/covid-challenge.png').mb-5
-                .row.align-items-center
-                    .col-lg-6
-                        img.img-fluid(src='assets/img/stanfordrebuild.png').mb-5
-                    .col-lg-6
-                        img.img-fluid(src='assets/img/sling-health.png').mb-5
 
             
 
