--- a/src/pug/pages/features.pug
+++ b/src/pug/pages/features.pug
@@ -3,7 +3,7 @@ extends ../layouts/default.pug
 block config
 
     //- Global Page Configuration
-    - var pageTitle = 'Wing Health'
+    - var pageTitle = 'Wing'
 
 
 block content
@@ -32,7 +32,7 @@ block content
             //-     .row.align-items-center
             //-         .col-lg-7
             //-             h1.page-header-title Local care for individuals
-            //-             p.page-header-text.mb-5 Wing Health connects you to telehealth delivered one-on-one, privately and confidentially, with a nearby professional via messaging, phone or video chat
+            //-             p.page-header-text.mb-5 Wing connects you to telehealth delivered one-on-one, privately and confidentially, with a nearby professional via messaging, phone or video chat
             //-         .col-lg-5
             //-             img.img-fluid(src='assets/img/svgs/mask-man.svg')                       
 
@@ -48,7 +48,7 @@ block content
                 .row.align-items-center
                     .col-lg-7
                         h1.page-header-title Resources for affordable data and WIFI
-                        p.page-header-text.mb-5 Patients use the Wing Health assistant to find nearby WIFI hotspots, affordable data plans and affordable home internet plans
+                        p.page-header-text.mb-5 Patients use the Wing assistant to find nearby WIFI hotspots, affordable data plans and affordable home internet plans
                     .col-lg-5
                         img.img-fluid(src='assets/img/screenshot-sms/data-resources.png' style="max-height: 700px")        
 
@@ -56,7 +56,7 @@ block content
                 .row.align-items-center
                     .col-lg-7
                         h1.page-header-title Onboard patients in multiple languages
-                        p.page-header-text.mb-5 The Wing Health assistant reflects the diversity of the communities we serve. Supporting English and Spanish, with more languages on the way
+                        p.page-header-text.mb-5 The Wing assistant reflects the diversity of the communities we serve. Supporting English and Spanish, with more languages on the way
                     .col-lg-5
                         img.img-fluid(src='assets/img/screenshot-sms/speak-spanish.png' style="max-height: 700px")
 
@@ -83,7 +83,7 @@ block content
                 //-             .card-body.p-5
                 //-                 .text-center
                 //-                     .h1 Meet local health care professionals 
-                //-                     .p.text-dark Wing Health connects individuals to local community providers offering virtual services
+                //-                     .p.text-dark Wing connects individuals to local community providers offering virtual services
 
                 //-     .col-lg-4.mb-5.mb-lg-0
                 //-         .card.h-100
