--- a/src/pug/pages/schedule-demo.pug
+++ b/src/pug/pages/schedule-demo.pug
@@ -3,7 +3,7 @@ extends ../layouts/default.pug
 block config
 
     //- Global Page Configuration
-    - var pageTitle = 'Wing Health'
+    - var pageTitle = 'Wing'
 
 
 block content
@@ -41,8 +41,8 @@ block content
             .container
                 .row.align-items-center.text-center.pt-4
                     .col-lg-12
-                        h1.page-header-title Learn about our SMS text assistant
-                        p.text-dark.pt-4 A Wing Health representitive will reach out to see how we can bring our automated assitant to your health center and patients
+                        h1.page-header-title Learn about our Text assistant
+                        p.text-dark.pt-4 A Wing representitive will reach out to see how we can bring our automated assitant to your health center and patients
 
                 .row.align-items-center.pt-4
                     .col-lg-2
