--- a/src/pug/pages/find-a-clinic.pug
+++ b/src/pug/pages/find-a-clinic.pug
@@ -3,7 +3,7 @@ extends ../layouts/default.pug
 block config
 
     //- Global Page Configuration
-    - var pageTitle = 'Wing Health'
+    - var pageTitle = 'Wing'
 
 
 block content
@@ -42,7 +42,7 @@ block content
                 .row.align-items-center.text-center.pt-4
                     .col-lg-12
                         h1.page-header-title We guide you to local virtual care
-                        p.text-dark.pt-4 A Wing Health representitive will reach out and connect you to a health professional. Find local primary care, mental health counseling, physical therapy and more that is suited to your unique needs.
+                        p.text-dark.pt-4 A Wing representitive will reach out and connect you to a health professional. Find local primary care, mental health counseling, physical therapy and more that is suited to your unique needs.
 
                 .row.align-items-center.pt-4
                     .col-lg-2
