--- a/src/pug/pages/mixins/navbar.pug
+++ b/src/pug/pages/mixins/navbar.pug
@@ -3,7 +3,7 @@ mixin navbar(options)
     nav.navbar.navbar-marketing.navbar-expand-lg(class=options.navbarBg, class=options.navbarStyle, class=options.navbarPosition)
         div(class=options.navbarContainer)
             //- a.navbar-brand(href='/', class=options.navbarBrandColor)
-                | Wing Health
+                | Wing
             <a href="/">
                 <img src="assets/img/logo2.png" alt="HTML tutorial" style="height:42px;border:0;">
             </a>
