--- a/src/pug/pages/features.pug
+++ b/src/pug/pages/features.pug
@@ -55,10 +55,10 @@ block content
             .container.pt-10
                 .row.align-items-center
                     .col-lg-7
-                        h1.page-header-title Onboard patients in multiple languages
-                        p.page-header-text.mb-5 The Wing assistant reflects the diversity of the communities we serve. Supporting English and Spanish, with more languages on the way
+                        h1.page-header-title English, Spanish and Chinese
+                        p.page-header-text.mb-5 The Wing assistant reflects the diversity of the communities we serve
                     .col-lg-5
-                        img.img-fluid(src='assets/img/screenshot-sms/speak-spanish.png' style="max-height: 700px")
+                        img.img-fluid(src='assets/img/screenshot-sms/languages.png' style="max-height: 700px")
 
             .container.pt-10
                 .row.align-items-center
@@ -75,6 +75,14 @@ block content
                         p.page-header-text.mb-5 Our virtual assistant schedules appointments at your health center's vitual clinic
                     .col-lg-5
                         img.img-fluid(src='assets/img/screenshot-sms/schedule.png' style="max-height: 700px")        
+
+            .container.pt-10
+                .row.align-items-center
+                    .col-lg-7
+                        h1.page-header-title Appointment reminders
+                        p.page-header-text.mb-5 Reduce the number of no shows to your virtual clinic
+                    .col-lg-5
+                        img.img-fluid(src='assets/img/screenshot-sms/reminder.png' style="max-height: 700px")        
                         
                         
                 //- .row.pt-4
